conditional width for tag list (different when dropdown is present) and fix width of the tag list containers at 100% to prevent overflow

--- a/src/assets/scss/modules/_item_list.scss
+++ b/src/assets/scss/modules/_item_list.scss
@@ -147,6 +147,10 @@ The Item list is the container and list of items for trade
   background: $white;
   padding: rem-calc(20px);
   margin-bottom: rem-calc(6px);
+  width: 100%;
+}
+
+.item-list-dropdown + .item-list-tags {
   width: 75%;
 }
 
